- Bugfix: Various skills had the wrong growth rate.
- Bugfix: "Jump" didn't process SP cost.
- Bugfix: Reposition distance and damage didn't render properly when NPC tech effects were hidden.
- UI: Added a warning if multiple special attack mods are added to the same tech.
- New: Added checkbox to Throw techniques to reroll the attack at no cost.
- New: Added experimental feature where damage and weaken techs can be auto-applied to the target by the GM.
- New: If !effect is used with a duration of 0, it won't track duration for the effect.

v1.5.1 (6/22/2020):
- Bugfix: Various incorrect costs.
- Bugfix: Healing techs didn't heal half value for soldiers.
- Bugfix: Custom Flaws without names would cause a crash.
- Bugfix: Using !init in a brand new game would cause a crash.
- Bugfix: !def didn't display def/res from bonus fields.
- Bugfix: !crit didn't display damage from attack bonus fields.
- Bugfix: Deleting the target then using !crit caused a crash.
- Bugfix: Ultimate attacks with Debilitating always show a max SP of 0.
- New: Updated Apply logic to apply hits, crits, and damage increments.
- New: All reroll logic compressed to one checkbox.

v1.5.2 (8/17/2020):
- Bugfix: Long Reach skill now identified by boosts.
- Bugfix: !sizeup breaking game if nothing selected.
- Bugfix: Apply buttons don't loop infinitely on debilitating technique.
- Bugfix: Critical health warning erroneously saying character was no longer at critical health at the exact critical threshold.

v1.5.3 (3/23/2021):
- Bugfix: Critical Health warnings weren't working right at exactly 40% HP.
- Bugfix: Infinite loop when trying to auto-apply techs with Debilitating Strike.

v1.5.4 (6/26/2021):
- Bugfix: Overdrive skills weren't updating correctly.
- Bugfix: Long Reach wasn't recognized as a skill.
- Bugfix: Wrong level up cost on Nullify.
- Bugfix: Techs used with Overload Limits couldn't be undone.
- New: Offensive techniques will refuse to execute if no attribute is selected.