@@ -2999,16 +2999,14 @@
                         <option value="weakAura">Weak Aura (+3)</option>
                         <option value="weakDefender">Weak Defender (+2/+1)</option>
                         <option value="weakWilled">Weak Willed (+4/+3)</option>
-                        <optgroup label="Optional Rules">
+                        <option disabled style="font-weight:bold" label="Optional Rules">
                             <option value="armorReliant">Armor Reliant (+2/+1)</option>
                             <option value="elementalVulnerability">Elemental Vulnerability (+2/+1)</option>
                             <option value="unprincipled">Unprincipled (+1)</option>
                             <option value="wardReliant">Ward Reliant (+2/+1)</option>
-                        </optgroup>
-                        <optgroup label="NPC Only">
+                        <option disabled style="font-weight:bold" label="NPC Only">
                             <option value="battleDamage">Battle Damage (+3)</option>
-                        </optgroup>
-                        <optgroup label="Villains, Creatures and Foes (BETA)">
+                        <option disabled style="font-weight:bold" label="Villains, Creatures and Foes (BETA)">
                             <option value="broadForm">Broad Form (+4)</option>
                             <option value="fearTheDarkness">Fear the Darkness (+3)</option>
                             <option value="immobile">Immobile (+7)</option>
@@ -3018,7 +3016,6 @@
                             <option value="thresheld">Thresheld (+3)</option>
                             <option value="weakGuard">Weak Guard (+2)</option>
                             <option value="malevolentPossession">Malevolent Possession (+10)</option>
-                        </optgroup>
                     </select>
                     <span class="label">
                         Level <input class="flaw-level" type="number" name="attr_flawlevel" value="1" />
@@ -3037,7 +3034,7 @@
                 <div class="skill-upper">
                     <select class="skill-picker" name="attr_skillname" selected="customSkill">
                         <option value="customSkill">Custom Skill</option>
-                        <optgroup label="Season 1 Skills">
+                        <option disabled style="font-weight:bold" label="Season 1 Skills">
                             <option value="acceleration">Acceleration (5)</option>
                             <option value="analysis">Analysis (5)</option>
                             <option value="asset">Asset (3)</option>
@@ -3112,8 +3109,7 @@
                             <option value="underhanded">Underhanded (5)</option>
                             <option value="unmovable">Unmovable (4/2)</option>
                             <option value="versatileFighter">Versatile Fighter (6/3)</option>
-                        </optgroup>
-                        <optgroup label="Season 2 Skills">
+                        <option disabled style="font-weight:bold" label="Season 2 Skills">
                             <option value="abundantCreation">Abundant Creation (5)</option>
                             <option value="afterimage">Afterimage (4)</option>
                             <option value="allyMount">Ally Mount (3/1)</option>
@@ -3159,8 +3155,7 @@
                             <option value="waterAdaptation">Water Adaptation (6)</option>
                             <option value="waterWalk">Water Walk (4)</option>
                             <option value="xRayVision">X-Ray Vision (4)</option>
-                        </optgroup>
-                        <optgroup label="Season 3 Skills">
+                        <option disabled style="font-weight:bold" label="Season 3 Skills">
                             <option value="attackNodeNetwork">Attack Node Network (4)</option>
                             <option value="companionSense">Companion Sense (2)</option>
                             <option value="defensiveClash">Defensive Clash (4)</option>
@@ -3176,8 +3171,7 @@
                             <option value="swiftJump">Swift Jump (3)</option>
                             <option value="unshakeable">Unshakeable (6)</option>
                             <option value="unstoppable">Unstoppable (6)</option>
-                        </optgroup>
-                        <optgroup label="Season 4 Skills">
+                        <option disabled style="font-weight:bold" label="Season 4 Skills">
                             <option value="breakValorLimit">Break Valor Limit (6)</option>
                             <option value="expandedReach">Expanded Reach (8)</option>
                             <option value="extendedRange">Extended Range (4)</option>
@@ -3189,8 +3183,7 @@
                             <option value="teleportation">Teleportation (6)</option>
                             <option value="unyieldingDetermination">Unyielding Determination (6)</option>
                             <option value="violentAura">Violent Aura (4)</option>
-                        </optgroup>
-                        <optgroup label="Season 1 (Optional Rules)">
+                        <option disabled style="font-weight:bold" label="Season 1 (Optional Rules)">
                             <option value="elementalResistance">Elemental Resistance (4/2)</option>
                             <option value="elementalAttunement">Elemental Attunement (3)</option>
                             <option value="illusoryDisguise">Illusory Disguise (3)</option>
@@ -3199,28 +3192,21 @@
                             <option value="principled">Principled (2)</option>
                             <option value="polearmWielder">Polearm Wielder (5)</option>
                             <option value="rangedWeaponWielder">Ranged Weapon Wielder (4/2)</option>
-                        </optgroup>
-                        <optgroup label="Season 2 (Optional Rules)">
+                        <option disabled style="font-weight:bold" label="Season 2 (Optional Rules)">
                             <option value="illusoryAssailant">Illusory Assailant (6/3)</option>
-                        </optgroup>
-                        <optgroup label="Season 1 (NPC Only)">
+                        <option disabled style="font-weight:bold" label="Season 1 (NPC Only)">
                             <option value="invisibility">Invisibility (8)</option>
-                        </optgroup>
-                        <optgroup label="Season 2 (NPC Only)">
+                        <option disabled style="font-weight:bold" label="Season 2 (NPC Only)">
                             <option value="revive">Revive (8/3)</option>
-                        </optgroup>
-                        <optgroup label="Season 4 (NPC Only)">
+                        <option disabled style="font-weight:bold" label="Season 4 (NPC Only)">
                             <option value="limitlessPower">Valiant (12)</option>
-                        </optgroup>
-                        <optgroup label="Villains, Creatures and Foes (BETA)">
-                        </optgroup>
-                        <optgroup label="Traits">
+                        <option disabled style="font-weight:bold" label="Villains, Creatures and Foes (BETA)">
+                        <option disabled style="font-weight:bold" label="Traits">
                             <option value="aquatic">Aquatic (1)</option>
                             <option value="construct">Construct (8)</option>
                             <option value="elemental">Elemental (5)</option>
                             <option value="undead">Undead (8)</option>
-                        </optgroup>
-                        <optgroup label="Season 1">
+                        <option disabled style="font-weight:bold" label="Season 1">
                             <option value="diminuitive">Diminuitive (6)</option>
                             <option value="healer">Healer (4/2)</option>
                             <option value="increasedLength">Increased Length (1/1)</option>
@@ -3234,30 +3220,26 @@
                             <option value="skillCopy">Skill Copy (?)</option>
                             <option value="swiftStance">Swift Stance (3/1)</option>
                             <option value="increasedCompanionSize">Increased Companion Size (1/1)</option>
-                        </optgroup>
-                        <optgroup label="Season 2">
+                        <option disabled style="font-weight:bold" label="Season 2">
                             <option value="largeHead">Large Head (1)</option>
                             <option value="limitedRegeneration">Limited Regeneration (4/3)</option>
                             <option value="longTail">Long Tail (1)</option>
                             <option value="trample">Trample (8)</option>
                             <option value="ultimateAttack">Ultimate Attack (12)</option>
                             <option value="victorAtAnyCost">Victor At Any Cost (8)</option>
-                        </optgroup>
-                        <optgroup label="Season 3">
+                        <option disabled style="font-weight:bold" label="Season 3">
                             <option value="alteredDurability">Altered Durability (3)</option>
                             <option value="burrow">Burrow (6)</option>
                             <option value="durableFlunky">Durable Flunky (6/3)</option>
                             <option value="resurrectingFlunky">Resurrecting Flunky (8)</option>
                             <option value="standTall">Stand Tall (6)</option>
                             <option value="terrainAdaptation">Terrain Adaptation (6)</option>
-                        </optgroup>
-                        <optgroup label="Season 4">
+                        <option disabled style="font-weight:bold" label="Season 4">
                             <option value="destructiveBurrow">Destructive Burrow (6)</option>
                             <option value="freeBurrow">Free Burrow (3)</option>
                             <option value="landAdaptation">Land Adaptation (4)</option>
                             <option value="shapeshifter">Shapeshifter (12)</option>
                             <option value="unscrupulous">Unscrupulous (6)</option>
-                        </optgroup>
                     </select>
                     <span class="label">Level</span> <input class="skill-level" type="number" name="attr_skilllevel" value="1" />
                     <span name="attr_warning"></span>
@@ -3358,12 +3340,11 @@
                         <option value="mimic">Mimic Core</option>
                         <option value="summoning">Summoning Core</option>
                         <option value="weaken">Weaken Core</option>
-                        <optgroup label="Ultimate Cores">
+                        <option disabled style="font-weight:bold" label="Ultimate Cores">
                             <option value="domain">Personal Domain</option>
                             <option value="ultDamage">Ultimate Attack</option>
                             <option value="ultMimic">Ultimate Mimic</option>
                             <option value="ultTransform">Transformation</option>
-                        </optgroup>
                         <option value="custom">Custom Core</option>
                     </select>
                 </div>
